spacing issues in card

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ body {
 }
 .icon-link-2 {
     color: #FFF;
-    
 }
 .icon-link-2:hover {
     -webkit-transform: scale(1.3);
@@ -378,8 +377,9 @@ footer {
     background-color: rgba(0, 0, 0, 0.75);
     height: 100%;
     width: 100%;
-    padding: 0px 15px;
+    padding: 0px 15px 25px 15px;
 }
 h3 {
     font-size: 22px;
+    margin-bottom: 0;
 }
